<resources>
    <string name="app_name">AttendanceApp</string>
    <!-- Network error message-->
    <string name="unknown_error">Some unknown error occurred.</string>
    <string name="network_error">Please check your internet connection.</string>
    <string name="system_error">Something went wrong. Please try again later.</string>
    <!-- Custom Fonts -->
    <string name="font_name_montserrat">montserrat</string>
    <string name="font_name_montserrat_bold">montserrat_bold</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="as_student">As Student</string>
    <string name="as_teacher">As Teacher</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="time_table">Time Table</string>
    <string name="view_student">View Student</string>
    <string name="Name"></string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_schedule">Day Schedule</string>
    <string name="week_schedule">Week Schedule</string>
    <string name="view_attendance">View Attendance</string>
    <string-array name="week">
    <item name="1">Monday</item>
    <item name="2">Tuesday</item>
    <item name="3">Wednesday</item>
    <item name="4">Thursday</item>
    <item name="5">Friday</item>
    <item name="6">Saturday</item>
    <item name="7">Sunday</item>
</string-array>
</resources>